fix: chat room toggle width and overlap issue fixed.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -229,7 +229,7 @@ nav button:hover {
   position: fixed;
   right: 0;
   top: 0;
-  width: 500px;
+  width: 25%;
   height: 400px;
   margin-top: 100px;
   background-color: aliceblue;
